# lilt-gui

./: .biomeignore  .dockerignore  .editorconfig  .env.example  .eslintrc.cjs  .eslintrc.js  .gitignore  CHANGELOG.md  CI_BUILD_FIXES.md  CI_BUILD_FIXES_FINAL.md  CI_BUILD_FIXES_ROUND2.md  CONTRIBUTING.md  DOCKER_FIXES.md  DOCKER_GUIDE.md  Dockerfile  Dockerfile.tauri  FIXES_2025_10_01.md  LICENSE  LINTER_FIXES.md  LINTER_FIXES_COMPLETE.md  Makefile  NEXT_STEPS.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SETUP_COMPLETE.md  TEST_COVERAGE_COMPLETE.md  TEST_LINTER_FIXES.md  TODO.md  UI_FIXES.md  app.go  biome.json  docker-compose.yml  docker-setup.sh  go.mod  index.html  jest.config.js  main.go  package-lock.json  package.json  (+8 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  cd.yml  ci.yml
docs/: DEVELOPMENT.md
frontend/: .eslintignore  biome.json  index.html  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  main.tsx
public/: icon-placeholder.txt
src/: App.css  App.tsx  i18n.ts  index.css  main.tsx  setupTests.ts  styled.d.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon-placeholder.txt  icon.icns
src-tauri/src/: main.rs
src/components/: ActionButtons.tsx  Actions.tsx  BinaryConfig.tsx  BinarySettings.test.tsx  BinarySettings.tsx  ConversionSettings.tsx  DirectorySettings.tsx  FolderSelection.tsx  Header.test.tsx  Header.tsx  HelpDialog.tsx  HelpModal.tsx  LanguageSelector.tsx  OutputDisplay.tsx  OutputTerminal.tsx  TooltipWrapper.test.tsx  TooltipWrapper.tsx  TranscodingOptions.tsx  index.ts
src/hooks/: useSettings.ts
src/i18n/: i18n.ts
src/locales/: de.json  es.json  es.json.backup  tr.json
src/main/: main.ts
src/renderer/: App.test.tsx  App.tsx  index.html  index.tsx  preload.ts
src/services/: tauri.ts
src/shared/: types.ts
src/test/: Actions.test.tsx  App.test.tsx  BinaryConfig.test.tsx  FolderSelection.test.tsx  setup.ts  (+7 more)
(+53 files in other folders)
