[package]
name = "lilt-gui"
version = "1.0.0"
description = "Modern GUI for Lilt - Lightweight Intelligent Lossless Transcoder"
authors = ["Arda Kilicdagi"]
license = "MIT"
repository = "https://github.com/Ardakilic/lilt-gui"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.4", features = ["api-all", "shell-execute", "dialog-open", "fs-read-file", "fs-write-file", "fs-read-dir", "path-all", "os-all"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]